tests/http/snapshots/http__v2_users__channels_need_twitch.snap
---
source: tests/http/v2_users.rs
expression: "get(\"/api/v2/channels\").send().await"
---
GET /api/v2/channels
status: 503 Service Unavailable
content-type: application/problem+json
---
{
  "code": "upstream_unavailable",
  "status": 503,
  "title": "Twitch cannot be queried yet"
}
