tests/http/snapshots/http__v2_users__users_need_twitch.snap
---
source: tests/http/v2_users.rs
expression: "get(\"/api/v2/users?login=testchan&id=22222\").send().await"
---
GET /api/v2/users?login=testchan&id=22222
status: 503 Service Unavailable
content-type: application/problem+json
---
{
  "code": "upstream_unavailable",
  "status": 503,
  "title": "Twitch cannot be queried yet"
}
